--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "@remix-run/dev": "^2.10.2",
+    "@types/node": "^22.2.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -50,7 +52,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
-    "prisma": "^5.16.1",
     "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
