--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@types/qs": "^6.9.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
     "isbot": "^4.1.0",
     "lucide-react": "^0.403.0",
+    "qs": "^6.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.16.0",
