--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@markdoc/markdoc": "^0.4.0",
     "@mux/mux-player-react": "^2.7.0",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
