--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@markdoc/markdoc": "^0.4.0",
     "@mux/mux-player-react": "^3.1.0",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
